--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -1,8 +1,8 @@
 <div class="forgot-password-page">
   <div class="row m-0">
-    <div class="d-none d-sm-block col-lg-8 col-md-7 col-sm-6 col-xs-12 pl-0 landing-page-image">
+    <div class="d-none d-sm-block col-lg-8 col-md-7 col-sm-6 col-xs-12 p-l-0 landing-page-image">
       <div class="min-height">
-        <img src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%;" />
+        <img src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%" />
       </div>
     </div>
     <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 offset-lg-0 parent right-align-form mxw-500px">
@@ -24,9 +24,7 @@
           <div class="heading-forget">
             <div class="otp">
               <img src="../../../assets/images/back.png" (click)="goBackToNumber()" />
-              <div>
-                Enter OTP
-              </div>
+              <div>Enter OTP</div>
             </div>
           </div>
           <div class="heading-des-forget">One Time Password (OTP) has been send to your mobile ******{{ lastFourDigit }}. Please enter the same here to change your password.</div>
@@ -61,8 +59,8 @@
                         <mat-select-trigger>
                           <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
                             ><img class="w-30 p-r-10 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                            <span class="p-r-5 font-size12 country-symbol">{{ selectedCountry && selectedCountry.countryCode }}</span>
-                            <span class="font-size12 text-semi-bold country-extension">{{ selectedCountry && selectedCountry.callingCode }}</span>
+                            <span class="p-r-5 fontsize-12-px country-symbol">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                            <span class="fontsize-12-px text-semi-bold country-extension">{{ selectedCountry && selectedCountry.callingCode }}</span>
                           </span>
                         </mat-select-trigger>
                         <mat-option
@@ -70,7 +68,7 @@
                           [value]="country"
                           selected="trade.isAttatched"
                           ><span
-                            ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                            ><img class="width-17 p-r-10" [src]="country.imageUrl" alt="" />
                             <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
                             <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
                           </span>
@@ -111,7 +109,7 @@
                 mat-raised-button
                 class="main-background-color main-button color-white m-b-5"
                 cdkFocusInitial
-                style="width: 100%;"
+                style="width: 100%"
                 [disabled]="this.callingCode === '+91' ? verifiedMobile : !emailVerified"
                 (click)="submitNumber()"
               >
@@ -144,7 +142,7 @@
                 mat-raised-button
                 class="main-background-color main-button color-white m-b-5"
                 cdkFocusInitial
-                style="width: 100%;"
+                style="width: 100%"
                 [disabled]="otpLength != 4"
                 (click)="submitOTP()"
               >
@@ -169,7 +167,7 @@
                 mat-raised-button
                 class="main-background-color main-button color-white m-b-5"
                 cdkFocusInitial
-                style="width: 100%;"
+                style="width: 100%"
                 [disabled]="!(pass.value.length > 5)"
                 (click)="submitPass()"
               >
