--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -1,68 +1,60 @@
 <form *ngIf="projectSelectedMaterials.length" [formGroup]="materialForms">
-  <div class="row" [ngClass]="isMobile ? 'm-podr3' : '' ">
+  <div class="row" [ngClass]="isMobile ? 'm-podr3' : ''">
     <div class="col-md-6 col-xs-12 p-t-10 border-input m-itm">
       <mat-form-field class="input-search-padding-zero w-50">
-        <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject"
-          [ngModelOptions]="{standalone: true}" />
+        <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
         <button mat-button matSuffix mat-icon-button>
           <mat-icon>search</mat-icon>
         </button>
       </mat-form-field>
 
       <mat-form-field class="p-l-20 input-search-padding-zero w-50">
-        <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial"
-          [ngModelOptions]="{standalone: true}" />
+        <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
         <button mat-button matSuffix mat-icon-button>
           <mat-icon>search</mat-icon>
         </button>
       </mat-form-field>
     </div>
 
-    <div class="col-md-6 col-xs-12 text-right p-t-10 p-b-10 m-itm" [ngClass]="isMobile ? 'sm-btn1' : '' ">
-      <span (click)="selectCurrency()"
-        class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select
-        Currency</span>
+    <div class="col-md-6 col-xs-12 text-right p-t-10 p-b-10 m-itm" [ngClass]="isMobile ? 'sm-btn1' : ''">
+      <span (click)="selectCurrency()" class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select Currency</span>
       <span class="p-r-5">
-        <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white"
-          (click)="materialAdded()" type="button">Back</button>
+        <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="materialAdded()" type="button">Back</button>
       </span>
       <span>
-        <button mat-raised-button matStepperNext [disabled]="!materialForms.valid" (click)="materialAdded()"
-          class="main-background-color main-button color-white">
-          Next
-        </button>
+        <button mat-raised-button matStepperNext [disabled]="!materialForms.valid" (click)="materialAdded()" class="main-background-color main-button color-white">Next</button>
       </span>
     </div>
 
-    <div class="col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'p-t-5 p-b-10' : 'p-t-10 p-b-20' "
-      *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null">
-      <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'font-size12 mcrncy pt-2 pb-2' : 'p-t-10 p-b-10' ">
+    <div
+      class="col-xs-12 text-right m-itm"
+      [ngClass]="isMobile ? 'p-t-5 p-b-10' : 'p-t-10 p-b-20'"
+      *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null"
+    >
+      <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy p-t-2 p-b-2' : 'p-t-10 p-b-10'">
         <span class="font-size-vary-grn color-grey">
-          <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag"
-            [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
+          <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
           {{ rfqData.rfqCurrency.exchangeCurrencyName }}
         </span>
         <span class="p-l-5"> = </span>
         <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqData.rfqCurrency.exchangeValue }} </span>
         <span class="p-l-5 color-grey">
-          <img width="25px" *ngIf="rfqData.rfqCurrency.primaryCurrencyFlag"
-            [src]="rfqData.rfqCurrency.primaryCurrencyFlag" />
+          <img width="25px" *ngIf="rfqData.rfqCurrency.primaryCurrencyFlag" [src]="rfqData.rfqCurrency.primaryCurrencyFlag" />
           {{ rfqData.rfqCurrency.primaryCurrencyName }}
         </span>
       </span>
     </div>
-
   </div>
 
   <div *ngFor="let material of projectSelectedMaterials | SearchPipe: searchProject:['projectName']; let mati = index">
     <ng-container *ngIf="material.projectMaterialList.length">
       <mat-accordion class="accordion-padding-zero" formArrayName="forms">
-        <mat-expansion-panel [expanded]="true" [ngClass]="isMobile ? 'mt-2' : '' ">
-          <mat-expansion-panel-header [ngClass]="isMobile ? 'font-size12 pt-4 pb-4' : '' ">
+        <mat-expansion-panel [expanded]="true" [ngClass]="isMobile ? 'mt-2' : ''">
+          <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-t-4 p-b-4' : ''">
             <mat-panel-title>
               {{ material.projectName }}
-              <a href="javascript:void(0)" (click)="openDialog(material)"
-                class="main-color p-l-15">{{ material.defaultAddress.addressLine1 }}
+              <a href="javascript:void(0)" (click)="openDialog(material)" class="main-color p-l-15"
+                >{{ material.defaultAddress.addressLine1 }}
                 {{ material.defaultAddress.addressLine2 }}
                 {{ material.defaultAddress.city }}
                 {{ material.defaultAddress.state }}
@@ -72,10 +64,7 @@
           </mat-expansion-panel-header>
 
           <div class="example-container mat-elevation-z8">
-
-            <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:['materialName']"
-              class="col-sm-12 rfq-custom-mat-width">
-
+            <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:['materialName']" class="col-sm-12 rfq-custom-mat-width">
               <ng-container matColumnDef="Material Name">
                 <th mat-header-cell *matHeaderCellDef>Material Name</th>
                 <td mat-cell *matCellDef="let element">
@@ -107,15 +96,13 @@
               <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
                 <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fullfillment Date</th>
                 <td mat-cell *matCellDef="let element; let i = index" class="fulfillment-date-col">
-                  <mat-form-field class="border-input"
-                    [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
+                  <mat-form-field class="border-input" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
                     <!-- <mat-label>Fullfil </mat-label> -->
                     <!-- <span class="form-placeholder">{{
                     materialForms["controls"]["forms"]["controls"][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
                       | date: "dd-MMM-yyy"
                   }}</span> -->
-                    <input matInput [min]="startDate" [matDatepicker]="dueDate" formControlName="fullfilmentDate"
-                      (click)="dueDate.open()" readonly />
+                    <input matInput [min]="startDate" [matDatepicker]="dueDate" formControlName="fullfilmentDate" (click)="dueDate.open()" readonly />
                     <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                     <mat-datepicker #dueDate startView="month" [startAt]="startDate"></mat-datepicker>
                   </mat-form-field>
@@ -128,15 +115,16 @@
                   <span>({{ rfqData.rfqCurrency && rfqData.rfqCurrency.exchangeCurrencyName ? rfqData.rfqCurrency.exchangeCurrencyName : primaryCurrencyCode }})</span>
                 </th>
                 <td mat-cell *matCellDef="let element; let i = index">
-                  <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)"
-                    class="border-input table-input">
-                    <input matInput formControlName="estimatedRate" type="text" appTwoDigitDecimaNumber
-                      placeholder="Estimated Rate" min="0" />
-                    <small *ngIf="
-                      materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].hasError(
-                        'pattern'
-                      ) && materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].touched
-                    " class="error-msg">
+                  <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
+                    <input matInput formControlName="estimatedRate" type="text" appTwoDigitDecimaNumber placeholder="Estimated Rate" min="0" />
+                    <small
+                      *ngIf="
+                        materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].hasError(
+                          'pattern'
+                        ) && materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].touched
+                      "
+                      class="error-msg"
+                    >
                       Invalid estimated rate
                     </small>
                   </mat-form-field>
@@ -146,10 +134,8 @@
               <ng-container matColumnDef="Quantity">
                 <th mat-header-cell *matHeaderCellDef>Quantity</th>
                 <td mat-cell *matCellDef="let element; let i = index">
-                  <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)"
-                    class="border-input table-input">
-                    <input matInput formControlName="quantity" type="text" placeholder="Quantity" min="0"
-                      appTwoDigitDecimaNumber />
+                  <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
+                    <input matInput formControlName="quantity" type="text" placeholder="Quantity" min="0" appTwoDigitDecimaNumber />
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -157,40 +143,39 @@
               <ng-container matColumnDef="Makes">
                 <th mat-header-cell *matHeaderCellDef>Makes</th>
                 <td mat-cell *matCellDef="let element; let i = index">
-                  <app-chip [chips]="element.makes"
-                    (onUpdate)="makesUpdate($event, i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0))"
-                    class="lh30"> </app-chip>
+                  <app-chip [chips]="element.makes" (onUpdate)="makesUpdate($event, i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0))" class="lh30"> </app-chip>
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="Attached Images">
-                <th mat-header-cell *matHeaderCellDef
-                  class="text-align-center justify-center minwidth-110-px attached-images-col">
-                  Attached Images
-                </th>
-                <td class="text-align-center attached-images-col" mat-cell *matCellDef="let element"
-                  [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+                <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px attached-images-col">Attached Images</th>
+                <td
+                  class="text-align-center attached-images-col"
+                  mat-cell
+                  *matCellDef="let element"
+                  [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+                >
                   <!-- View image modal link -->
-                  <div *ngIf="element?.documentList?.length" class="images-lists mt-3"
-                    (click)="viewAllImages(element.materialId, element)">
+                  <div *ngIf="element?.documentList?.length" class="images-lists m-t-3" (click)="viewAllImages(element.materialId, element)">
                     <ng-container *ngFor="let img of element.documentList; let i = index">
-                      <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image"
-                        *ngIf="i < 3" />
+                      <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
                     </ng-container>
                   </div>
 
                   <ng-container *ngIf="!(element && element.documentList && element.documentList.length)">
-                    <img src="assets/images/project-default-image.png" alt="default-material"
-                      class="img-fluid default-image" />
+                    <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
                   </ng-container>
-
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="Upload Images">
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td class="text-align-center" mat-cell *matCellDef="let element"
-                  [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+                <td
+                  class="text-align-center"
+                  mat-cell
+                  *matCellDef="let element"
+                  [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+                >
                   <!-- Upload Image Link -->
                   <a class="cursor-pointer issue-to-indent-icon" matTooltip="Add/Edit Image" (click)="uploadImage(element, 'rfq')">
                     <img class="width-20-px mt-1 mr-2" src="assets/images/upload-image-icon.svg" />
@@ -198,13 +183,10 @@
                 </td>
               </ng-container>
 
-
               <tr mat-row *matHeaderRowDef="displayedColumns" class="tbl-header-cols"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns" class="tbl-body-cols"></tr>
             </table>
-
           </div>
-
         </mat-expansion-panel>
       </mat-accordion>
     </ng-container>
