--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -1,9 +1,9 @@
 <div class="sign-in-up">
   <div class="row m-0">
-    <div class="d-none d-sm-block col-lg-8 col-md-7 col-sm-6 col-xs-12 pl-0 landing-page-image">
+    <div class="d-none d-sm-block col-lg-8 col-md-7 col-sm-6 col-xs-12 p-l-0 landing-page-image">
       <div class="min-height">
-        <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.jpg" alt="construction-site-image" class="signup-image" style="width: 100%;" />
-        <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%;" />
+        <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.jpg" alt="construction-site-image" class="signup-image" style="width: 100%" />
+        <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%" />
       </div>
     </div>
     <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 offset-lg-0 parent right-align-form mxw-500px">
@@ -32,7 +32,7 @@
               You will be charged a monthly subscription fee of INR 9999 after your three months free trial period ends. <br />
               This is an introductory offer for the first year of your purchase only.
             </div>
-            <div class="font-size16 p-l-5 p-r-5"> </div>
+            <div class="fontsize-16-px p-l-5 p-r-5"> </div>
           </div>
         </div> -->
       </div>
