--- a/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
@@ -1,127 +1,144 @@
-<div class="page-start-point mt-5 pt-4">
-    <div class="p-l-20 p-r-20 p-b-20 copy-bom-materials-outer">
-        <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2">
-        </card-layout>
+<div class="page-start-point mt-5 p-t-4">
+  <div class="p-l-20 p-r-20 p-b-20 copy-bom-materials-outer">
+    <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"> </card-layout>
 
-        <div class="row align-items-center copy-bom-small-screen">
-            <div class="col-xs-6 col-md-3 copy-bom-search-input">
-                <mat-form-field class="search-form-field border-input w-100">
-                    <input matInput placeholder="Search Materials" type="search" (keyup)="applyFilter($event)" />
-                    <button mat-button matSuffix mat-icon-button>
-                        <mat-icon>search</mat-icon>
-                    </button>
-                </mat-form-field>
+    <div class="row align-items-center copy-bom-small-screen">
+      <div class="col-xs-6 col-md-3 copy-bom-search-input">
+        <mat-form-field class="search-form-field border-input w-100">
+          <input matInput placeholder="Search Materials" type="search" (keyup)="applyFilter($event)" />
+          <button mat-button matSuffix mat-icon-button>
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+
+      <div class="col-xs-6 col-md-3 copy-bom-select-project">
+        <mat-form-field class="border-select select-project-dropdown w-100">
+          <mat-label>Select Project</mat-label>
+          <mat-select>
+            <div class="search-project-div d-flex align-items-center">
+              <input
+                class="p-b-5"
+                matInput
+                type="Search Project..."
+                placeholder="Search project Name"
+                [(ngModel)]="searchText"
+                [ngModelOptions]="{standalone: true}"
+                (keydown)="$event.stopPropagation()"
+                autocomplete="off"
+              />
+              <button mat-button matSuffix mat-icon-button>
+                <mat-icon>search</mat-icon>
+              </button>
             </div>
+            <mat-option
+              *ngFor="let project of allProjectsList | SearchPipe: searchText:['projectName']"
+              [value]="project.projectName"
+              (click)="getProjectMaterials(project.projectId)"
+            >
+              {{ project.projectName }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
 
-            <div class="col-xs-6 col-md-3 copy-bom-select-project">
-                <mat-form-field class="border-select select-project-dropdown w-100">
-                    <mat-label>Select Project</mat-label>
-                    <mat-select>
-                        <div class="search-project-div d-flex align-items-center">
-                            <input class="p-b-5" matInput type="Search Project..." placeholder="Search project Name"
-                                [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}"
-                                (keydown)="$event.stopPropagation()" autocomplete="off" />
-                            <button mat-button matSuffix mat-icon-button>
-                                <mat-icon>search</mat-icon>
-                            </button>
-                        </div>
-                        <mat-option *ngFor="let project of allProjectsList | SearchPipe: searchText:['projectName']"
-                            [value]="project.projectName" (click)="getProjectMaterials(project.projectId)">
-                            {{project.projectName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-
-            <div class="col-xs-12 col-md-6 text-right copy-bom-button-action">
-                <button mat-raised-button class="main-background-color main-button color-white"
-                    (click)="copySelectedMaterials()">Copy</button>
-            </div>
-        </div>
-
-        <!-- If any project select then this block will display -->
-        <ng-container *ngIf="dataSource?.filteredData?.length; else noProjectSelected">
-            <div class="row mt-4">
-                <p>*Select materials to make BOM of project "{{ projectData.projectName }}"</p>
-            </div>
-
-            <div class="row bom-details-table-div-part example-container mat-elevation-z8">
-                <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows class="col-sm-12 bom-material-table">
-                    
-                    <ng-container matColumnDef="materialName">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="bom-material-name-col">
-                            <mat-checkbox #allCh (change)="getElemenetChecked(allCh, dataSource, 'SelectAll')">
-                                Material Name
-                            </mat-checkbox>
-                        </th>
-                        <td class="text-left" mat-cell *matCellDef="let element"
-                            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-                            <mat-checkbox #ch (change)="getElemenetChecked(ch, element, 'Select')"
-                                [checked]="element.checked"
-                                [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false">
-                                <div class="limited-character bom" matTooltip=" {{ element.materialName }}">
-                                    {{ element.materialName }}
-                                    <br /></div>
-                                <div class="limited-character bom" matTooltip=" {{ element.materialGroup }}">
-                                    <span class="category-name">
-                                        {{ element.materialGroup }}
-                                    </span>
-                                </div>
-                            </mat-checkbox>
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="materialUnit">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center justify-center">
-                            Unit
-                        </th>
-                        <td class="text-align-center" mat-cell *matCellDef="let element"
-                            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-                            {{ element.materialUnit }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="estimatedQty">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center justify-center minwidth-110-px">
-                            Estimated Quantity
-                        </th>
-                        <td class="text-align-center" mat-cell *matCellDef="let element"
-                            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-                            {{ element.estimatedQty }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="estimatedRate">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center justify-center minwidth-110-px">
-                            Unit Rate (INR)
-                        </th>
-                        <td class="text-align-center" mat-cell *matCellDef="let element"
-                            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-                            {{ element.estimatedRate }}
-                        </td>
-                    </ng-container>
-
-                    <tr mat-header-row *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
-                    <tr mat-row *matRowDef="let element; columns: columnsToDisplay" (click)="toggleRow(element)"></tr>
-                </table>
-            </div>
-        </ng-container>
-
-        <!-- If no project selected then this block will display -->
-        <ng-template #noProjectSelected>
-            <div class="row py-5">
-                <div class="col-md-4 offset-md-4">
-                    <div class="no-project-selected-img text-center mb-4">
-                        <img src="assets/images/no-project-selected.png" alt="No project selected"
-                            class="img-fluid w-75" />
-                    </div>
-
-                    <div class="no-project-selected-info">
-                        <p class="text-center">You need to select any project to see and copy the materials! Please
-                            select the project from the above to proceed.</p>
-                    </div>
-                </div>
-            </div>
-        </ng-template>
+      <div class="col-xs-12 col-md-6 text-right copy-bom-button-action">
+        <button mat-raised-button class="main-background-color main-button color-white" (click)="copySelectedMaterials()">Copy</button>
+      </div>
     </div>
+
+    <!-- If any project select then this block will display -->
+    <ng-container *ngIf="dataSource?.filteredData?.length; else noProjectSelected">
+      <div class="row mt-4">
+        <p>*Select materials to make BOM of project "{{ projectData.projectName }}"</p>
+      </div>
+
+      <div class="row bom-details-table-div-part example-container mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows class="col-sm-12 bom-material-table">
+          <ng-container matColumnDef="materialName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="bom-material-name-col">
+              <mat-checkbox #allCh (change)="getElemenetChecked(allCh, dataSource, 'SelectAll')"> Material Name </mat-checkbox>
+            </th>
+            <td
+              class="text-left"
+              mat-cell
+              *matCellDef="let element"
+              [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+            >
+              <mat-checkbox
+                #ch
+                (change)="getElemenetChecked(ch, element, 'Select')"
+                [checked]="element.checked"
+                [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false"
+              >
+                <div class="limited-character bom" matTooltip=" {{ element.materialName }}">
+                  {{ element.materialName }}
+                  <br />
+                </div>
+                <div class="limited-character bom" matTooltip=" {{ element.materialGroup }}">
+                  <span class="category-name">
+                    {{ element.materialGroup }}
+                  </span>
+                </div>
+              </mat-checkbox>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="materialUnit">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center justify-center">Unit</th>
+            <td
+              class="text-align-center"
+              mat-cell
+              *matCellDef="let element"
+              [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+            >
+              {{ element.materialUnit }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="estimatedQty">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center justify-center minwidth-110-px">Estimated Quantity</th>
+            <td
+              class="text-align-center"
+              mat-cell
+              *matCellDef="let element"
+              [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+            >
+              {{ element.estimatedQty }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="estimatedRate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center justify-center minwidth-110-px">Unit Rate (INR)</th>
+            <td
+              class="text-align-center"
+              mat-cell
+              *matCellDef="let element"
+              [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+            >
+              {{ element.estimatedRate }}
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
+          <tr mat-row *matRowDef="let element; columns: columnsToDisplay" (click)="toggleRow(element)"></tr>
+        </table>
+      </div>
+    </ng-container>
+
+    <!-- If no project selected then this block will display -->
+    <ng-template #noProjectSelected>
+      <div class="row py-5">
+        <div class="col-md-4 offset-md-4">
+          <div class="no-project-selected-img text-center mb-4">
+            <img src="assets/images/no-project-selected.png" alt="No project selected" class="img-fluid w-75" />
+          </div>
+
+          <div class="no-project-selected-info">
+            <p class="text-center">You need to select any project to see and copy the materials! Please select the project from the above to proceed.</p>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+  </div>
 </div>
