--- a/src/app/features/my-material/my-material.component.html
+++ b/src/app/features/my-material/my-material.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point pt-4">
+<div class="page-start-point p-t-4">
   <div *ngIf="!selectedCategory.length; else elseBlock" class="parent p-t-20 min-height">
     <div class="p-l-10 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
@@ -10,8 +10,7 @@
           </p>
         </div>
         <div>
-          <button mat-raised-button class="main-background-color main-button color-white"
-            (click)="openAddMaterial()">+Add Material</button>
+          <button mat-raised-button class="main-background-color main-button color-white" (click)="openAddMaterial()">+Add Material</button>
         </div>
       </div>
     </div>
