--- a/src/app/features/rfq-supplier-template/rfq-bid-documents/rfq-bid-documents.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-bid-documents/rfq-bid-documents.component.html
@@ -1,7 +1,7 @@
 <div class="row p-t-25">
-  <mat-card class="width98Percent margin-0-auto radius-10">
+  <mat-card class="width-98 margin-0-auto radius-10">
     <mat-card-header class="upload-documents-mat-header">
-      <span class="text-semi-bold width100Percent">
+      <span class="text-semi-bold width-100">
         <app-upload #uploadRef [documentListLength]="documentListLength" [filesRemoved]="filesRemoved" (onFileUpdate)="fileUpdate($event)"> </app-upload>
       </span>
       <!-- <span class="col-xs-12 text-align-center text-semi-bold">
@@ -17,18 +17,14 @@
             <span>{{ file.DocumentDesc }}</span>
             <span class="show-download">
               <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
-                <i class="material-icons">
-                  remove_red_eye
-                </i>
+                <i class="material-icons"> remove_red_eye </i>
               </a>
             </span>
           </mat-list-item>
         </span>
         <span *ngIf="!documentData">
           <mat-list-item>
-            <div class="col-xs-12 text-align-center">
-              No files to preview
-            </div>
+            <div class="col-xs-12 text-align-center">No files to preview</div>
           </mat-list-item>
         </span>
         <span>
@@ -38,13 +34,11 @@
             <span class="word-break-all">{{ file.documentName }}</span>
             <span class="show-download">
               <a type="button" target="_blank" [href]="file.Url" mat-icon-button>
-                <i class="material-icons">
-                  remove_red_eye
-                </i>
+                <i class="material-icons"> remove_red_eye </i>
               </a>
             </span>
             <button type="button" (click)="removeFile(i)" mat-icon-button>
-              <mat-icon class="font-size-16">cancel</mat-icon>
+              <mat-icon>cancel</mat-icon>
             </button>
           </mat-list-item>
         </span>
