--- a/src/app/features/users/my-subscriptions/my-subscriptions.component.html
+++ b/src/app/features/users/my-subscriptions/my-subscriptions.component.html
@@ -1,4 +1,4 @@
 <div class="subs-bg-col h-35"></div>
-<div class="page-start-point pt-4">
-    <app-subscriptions [data]="subscriptionsData" [trialAction]="false"></app-subscriptions>
+<div class="page-start-point p-t-4">
+  <app-subscriptions [data]="subscriptionsData" [trialAction]="false"></app-subscriptions>
 </div>
