--- a/src/app/shared/dialogs/add-address-po/add-address.component.html
+++ b/src/app/shared/dialogs/add-address-po/add-address.component.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-xs-12 p-t-10 show-address-po-modal">
               <mat-radio-group aria-label="Select an option" name="address" formControlName="address">
-                <div class="p-t-10 p-b-10 gray-border" *ngFor="let add of address">
+                <div class="p-t-10 p-b-10 gray-bottom-border" *ngFor="let add of address">
                   <mat-radio-button class="p-l-15" [value]="add" [checked]="add.primaryAddress === 1">
                     <div class="max-width-of-select-address">
                       <span *ngIf="add.addressLine1">{{ add.addressLine1 }}</span>
@@ -36,9 +36,7 @@
             </div>
           </div>
           <div class="pull-right p-t-5">
-            <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onselectAddress()">
-              Save
-            </button>
+            <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onselectAddress()">Save</button>
           </div>
         </form>
       </ng-container>
@@ -79,7 +77,7 @@
           <div class="row">
             <div class="col-xs-6">
               <!-- country -->
-              <mat-form-field class="border-select mat-form-field-infix-padding-top mat-form-field-flex-mm-padding mt6p width-100">
+              <mat-form-field class="border-select mat-form-field-infix-padding-top mat-form-field-flex-mm-padding m-t-6 width-100">
                 <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                   <div class="display-flex">
                     <input
@@ -98,13 +96,13 @@
                   <mat-select-trigger>
                     <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
                       ><img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                      <span class="p-r-5 color-brand font-size16">{{ selectedCountry && selectedCountry.name }}</span>
-                      <!-- <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
+                      <span class="p-r-5 color-brand fontsize-16-px">{{ selectedCountry && selectedCountry.name }}</span>
+                      <!-- <span class="fontsize-12-px text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
                     </span>
                   </mat-select-trigger>
                   <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country" selected="trade.isAttatched"
                     ><span
-                      ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                      ><img class="width-17 p-r-10" [src]="country.imageUrl" alt="" />
                       <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
                       <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
                     </span>
@@ -118,14 +116,10 @@
                   <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
                 </mat-form-field>
                 <ng-container *ngIf="newAddressForm.controls['pinCode'].touched">
-                  <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && pincodeLength <= 0" class="form-error-msg p-l-15">
-                    Pincode is required
-                  </small>
+                  <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && pincodeLength <= 0" class="form-error-msg p-l-15"> Pincode is required </small>
                   <!-- <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
                                     class="form-error-msg p-l-15"> Enter Valid Pincode</small> -->
-                  <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg p-l-15">
-                    Enter Valid Pincode
-                  </small>
+                  <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg p-l-15"> Enter Valid Pincode </small>
                 </ng-container>
               </div>
             </div>
