--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -6,23 +6,17 @@
 </div>
 <br />
 
-<div class="text-center p-b-10 color-grey font-size14" *ngIf="exchangeValue>0">
+<div class="text-center p-b-10 color-grey fontsize-14-px" *ngIf="exchangeValue>0">
   You are floating the RFP in <span>{{exchangeCurrency}}</span> with conversion rate of <span>{{exchangeValue}} </span><span>{{primaryCurrency}}</span>.Suppliers will have to
   submit the quote in this selected currency
 </div>
-<div class="text-center text-semi-bold color-grey">
-  Do you want to float the RFP?
-</div>
+<div class="text-center text-semi-bold color-grey">Do you want to float the RFP?</div>
 
-<div class="pt-4 pb-4" mat-dialog-actions>
+<div class="p-t-4 p-b-4" mat-dialog-actions>
   <div class="col-xs-6">
-    <button mat-raised-button class="main-color main-button pull-left" (click)="close(null)">
-      Cancel
-    </button>
+    <button mat-raised-button class="main-color main-button pull-left" (click)="close(null)">Cancel</button>
   </div>
   <div class="col-xs-6">
-    <button mat-raised-button class="main-background-color main-button color-white pull-right" (click)="addRFQ()">
-      Float RFP
-    </button>
+    <button mat-raised-button class="main-background-color main-button color-white pull-right" (click)="addRFQ()">Float RFP</button>
   </div>
 </div>
