--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -22,7 +22,7 @@
         </mat-form-field>
       </div>
 
-      <div class="col-xs-12 display-flex supplier-dialog pl-0 pr-0">
+      <div class="col-xs-12 display-flex supplier-dialog p-l-0 p-r-0">
         <div class="col-xs-4 col-md-2">
           <mat-form-field class="border-select mat-form-field-flex-mm-padding">
             <mat-select formControlName="countryCode">
@@ -44,14 +44,14 @@
                 <mat-label>
                   <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
                     ><img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                    <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
-                    <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
+                    <span class="p-r-5 fontsize-12-px">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                    <span class="fontsize-12-px text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
                   </span>
                 </mat-label>
               </mat-select-trigger>
               <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country" selected="trade.isAttatched"
                 ><span
-                  ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                  ><img class="width-17 p-r-10" [src]="country.imageUrl" alt="" />
                   <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
                   <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
                 </span>
@@ -84,8 +84,6 @@
   </div>
 
   <div mat-dialog-actions class="save-btn-add-edit-user-modal" [ngClass]="isMobile ? 'sm-btn1' : '' ">
-    <button mat-raised-button [disabled]="!form.valid" class="main-background-color main-button color-white m-b-5">
-      Add
-    </button>
+    <button mat-raised-button [disabled]="!form.valid" class="main-background-color main-button color-white m-b-5">Add</button>
   </div>
 </form>
