--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -7,19 +7,15 @@
   </div>
 
   <div mat-dialog-content>
-    <div class="row pb-3">
-      <div class="col-md-5 mid-head-top limited-character universal" matTooltip="{{issueToIndentDetails.materialName}}" style="font-weight: 500;">
+    <div class="row p-b-3">
+      <div class="col-md-5 mid-head-top limited-character universal" matTooltip="{{issueToIndentDetails.materialName}}" style="font-weight: 500">
         {{issueToIndentDetails.materialName}}
       </div>
       <div class="col-md-7 mid-head-top">
-        <span style="font-weight: 500;">
+        <span style="font-weight: 500">
           Available in Stock:
-          <span *ngIf="issueToIndentDetails.availableStock>0">
-            {{issueToIndentDetails.availableStock}}
-          </span>
-          <span *ngIf="issueToIndentDetails.availableStock == null">
-            0
-          </span>
+          <span *ngIf="issueToIndentDetails.availableStock>0"> {{issueToIndentDetails.availableStock}} </span>
+          <span *ngIf="issueToIndentDetails.availableStock == null"> 0 </span>
           {{issueToIndentDetails.materialUnit}}
         </span>
       </div>
@@ -38,28 +34,20 @@
         <form [formGroup]="materialForms">
           <div formArrayName="forms" class="row p-t-10 p-b-10 gray-border" *ngFor="let indent of issueToIndentDetails.indentDetailList; let i = index;">
             <div class="col-xs-2 formGroup p-t-12">
-              <div>
-                {{indent.indentId}}
-              </div>
+              <div>{{indent.indentId}}</div>
             </div>
 
             <div class="col-xs-2 formGroup p-t-12 text-center">
-              <div>
-                {{indent.quantity}}
-              </div>
+              <div>{{indent.quantity}}</div>
             </div>
 
             <div class="col-xs-2 formGroup p-t-12">
-              <div>
-                {{indent.dueDate|date: "dd-MMM-yyy"}}
-              </div>
+              <div>{{indent.dueDate|date: "dd-MMM-yyy"}}</div>
             </div>
 
             <div class="col-xs-2 formGroup p-t-12">
               <div class="supplier-qty-div">
-                <div class="p-r-50">
-                  {{indent.issuedQty}}
-                </div>
+                <div class="p-r-50">{{indent.issuedQty}}</div>
 
                 <div class="show-detail-supplier" *ngIf="indent.IssuedQuantityList">
                   <!-- <img src="../../../../assets/images/i_icon.png" /> -->
@@ -104,17 +92,11 @@
 
   <div mat-dialog-actions class="p-b-15">
     <div class="col-sm-12 text-align-center">
-      <small class="error-msg" *ngIf="errorMsg">
-        Sum of 'To be issued' quantities should be less than available stock.
-      </small>
+      <small class="error-msg" *ngIf="errorMsg"> Sum of 'To be issued' quantities should be less than available stock. </small>
     </div>
     <div class="col-sm-12 save-btn-add-edit-user-modal">
-      <button mat-raised-button (click)="onNoClick()" class="main-color main-button pull-left">
-        Cancel
-      </button>
-      <button [disabled]="errorMsg || !materialForms.valid" mat-raised-button (click)="showIndent()" class="main-background-color main-button color-white pull-right">
-        Save
-      </button>
+      <button mat-raised-button (click)="onNoClick()" class="main-color main-button pull-left">Cancel</button>
+      <button [disabled]="errorMsg || !materialForms.valid" mat-raised-button (click)="showIndent()" class="main-background-color main-button color-white pull-right">Save</button>
     </div>
   </div>
 </div>
@@ -131,9 +113,7 @@
   <div mat-dialog-content>
     <div class="row">
       <div class="col-md-12 no-indent-list">
-        <p class="text-center no-indent">
-          No Purchase Requisition Available for the {{issueToIndentDetails.materialName}}
-        </p>
+        <p class="text-center no-indent">No Purchase Requisition Available for the {{issueToIndentDetails.materialName}}</p>
       </div>
     </div>
   </div>
