--- a/src/app/shared/dialogs/select-po-role/selectPoRole.html
+++ b/src/app/shared/dialogs/select-po-role/selectPoRole.html
@@ -1,5 +1,4 @@
 <form *ngIf="approverData" [formGroup]="approverFrm">
-
   <div class="header-add-edit-dialog">
     <h1 mat-dialog-title>Select Project Contact Person</h1>
     <button type="button" class="close cursor-pointer" (click)="closeDialog()" aria-label="Close">
@@ -7,7 +6,7 @@
     </button>
   </div>
 
-<!-- 
+  <!-- 
     <table mat-table [dataSource]="approverData" class="col-sm-12 approver-tbl">
       <ng-container matColumnDef="User Name">
         <th mat-header-cell *matHeaderCellDef>User</th>
@@ -39,43 +38,30 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table> -->
 
-    <div class="max-height-300 overflow-y-auto overflow-x-hidden">
-      <ng-container *ngFor="let element of approverData;let i=index">
-        <div [ngClass]="(i!=(approverData.length - 1))? 'row Width99Percent margin-0-auto font-size-vary-grn p-t-10 border-bottom-grey' : 'row Width99Percent margin-0-auto font-size-vary-grn p-t-10'">
-          <div class="col-xs-8 display-flex">
-            <div> 
-              <mat-radio-group name="aprrover" aria-labelledby="example-radio-group-label" class="example-radio-group" formControlName="approver">
-                <mat-radio-button class="example-radio-button" [value]="element" [checked]="element.checked">
-                </mat-radio-button>
-              </mat-radio-group>
-            </div>
-           
-            <div>
-              <div class="width100Percent word-break-all text-semi-bold"> 
-                {{element.firstName}} {{element.lastName}}
-              </div>
-              <div class="color-grey width100Percent word-break-all">    
-                {{element.email}}
-              </div>
-              <div class="color-grey width100Percent word-break-all">    
-                {{element.contactNo}}
-              </div>
-            </div>
-             
+  <div class="maxheight-300-px overflow-y-auto overflow-x-hidden">
+    <ng-container *ngFor="let element of approverData;let i=index">
+      <div
+        [ngClass]="(i!=(approverData.length - 1))? 'row width-99 margin-0-auto font-size-vary-grn p-t-10 gray-bottom-border' : 'row width-99 margin-0-auto font-size-vary-grn p-t-10'"
+      >
+        <div class="col-xs-8 display-flex">
+          <div>
+            <mat-radio-group name="aprrover" aria-labelledby="example-radio-group-label" class="example-radio-group" formControlName="approver">
+              <mat-radio-button class="example-radio-button" [value]="element" [checked]="element.checked"> </mat-radio-button>
+            </mat-radio-group>
           </div>
-          <div class="col-xs-4 color-grey width100Percent word-break-all text-semi-bold">
-            {{element.roleDescription}}
+
+          <div>
+            <div class="width-100 word-break-all text-semi-bold">{{element.firstName}} {{element.lastName}}</div>
+            <div class="color-grey width-100 word-break-all">{{element.email}}</div>
+            <div class="color-grey width-100 word-break-all">{{element.contactNo}}</div>
           </div>
         </div>
-      </ng-container>
-     
-    </div>
-   
+        <div class="col-xs-4 color-grey width-100 word-break-all text-semi-bold">{{element.roleDescription}}</div>
+      </div>
+    </ng-container>
+  </div>
 
-    <div class="row col-xs-12 p-t-10 justify-content-center">
-      <button mat-raised-button class="main-background-color main-button color-white" (click)="selectRole()">
-        Save
-      </button>
-    </div>
- 
+  <div class="row col-xs-12 p-t-10 justify-content-center">
+    <button mat-raised-button class="main-background-color main-button color-white" (click)="selectRole()">Save</button>
+  </div>
 </form>
