--- a/src/app/shared/dialogs/select-supplier-address/select-supplier-address.component.html
+++ b/src/app/shared/dialogs/select-supplier-address/select-supplier-address.component.html
@@ -13,32 +13,25 @@
 
 <!-- class="mat-tab-add-address-modal-po" -->
 <div mat-dialog-content class="mat-tab-add-address-modal-po">
-
-          <div class="row">
-            <div class="col-xs-12 p-t-10 show-address-supplier-modal">
-              <mat-radio-group aria-label="Select an option" name="address">
-                <div class="p-t-10 p-b-10 gray-border" *ngFor="let add of supplierAddresses">
-                  <mat-radio-button class="p-l-25" (change)="onChange($event)" [value]="add" [checked]="add.primaryAddress===1">
-                    <div class="max-width-of-select-address">
-                       <span *ngIf="add.addressLine1">{{add.addressLine1}}</span>
-                        <span *ngIf="add.addressLine2">, {{add.addressLine2}}</span>
-                        <span *ngIf="add.city">, {{add.city}}</span>
-                        <span *ngIf="add.state">, {{add.state}}</span>
-                        <span *ngIf="add.pinCode">, {{add.pinCode}}</span>
-                        <span *ngIf="add.gstNo"> | {{add.gstNo}}</span>
-                    </div>
-                  </mat-radio-button>
-                </div>
-              </mat-radio-group>
+  <div class="row">
+    <div class="col-xs-12 p-t-10 show-address-supplier-modal">
+      <mat-radio-group aria-label="Select an option" name="address">
+        <div class="p-t-10 p-b-10 gray-bottom-border" *ngFor="let add of supplierAddresses">
+          <mat-radio-button class="p-l-25" (change)="onChange($event)" [value]="add" [checked]="add.primaryAddress === 1">
+            <div class="max-width-of-select-address">
+              <span *ngIf="add.addressLine1">{{ add.addressLine1 }}</span>
+              <span *ngIf="add.addressLine2">, {{ add.addressLine2 }}</span>
+              <span *ngIf="add.city">, {{ add.city }}</span>
+              <span *ngIf="add.state">, {{ add.state }}</span>
+              <span *ngIf="add.pinCode">, {{ add.pinCode }}</span>
+              <span *ngIf="add.gstNo"> | {{ add.gstNo }}</span>
             </div>
-          </div>
-          <div class="pull-right p-t-5">
-            <button mat-raised-button class="main-background-color main-button color-white m-b-5"  [disabled]="addressId == null" (click)="onselectAddress()">
-              Save
-            </button>
-          </div>
-       
-     
-
-   
+          </mat-radio-button>
+        </div>
+      </mat-radio-group>
+    </div>
+  </div>
+  <div class="pull-right p-t-5">
+    <button mat-raised-button class="main-background-color main-button color-white m-b-5" [disabled]="addressId == null" (click)="onselectAddress()">Save</button>
+  </div>
 </div>
