--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -34,6 +34,7 @@
 @import "./pages/subscriptions.scss";
 @import "./pages/advance-search.scss";
 @import "./pages/grn.scss";
+@import "./pages/tax-othercost.scss";
 
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
