--- a/src/assets/scss/pages/grn.scss
+++ b/src/assets/scss/pages/grn.scss
@@ -160,7 +160,7 @@ $mat-row-horizontal-padding: 12px;
     padding: 6px;
   }
 
-  .mat-expansion-panel-content{
+  .mat-expansion-panel-content {
     overflow-x: auto;
   }
 }
@@ -196,13 +196,13 @@ $mat-row-horizontal-padding: 12px;
   }
 }
 
-.receipt-unit{
+.receipt-unit {
   width: 80px;
 }
 
 .receipt-brand-name,
 .receipt-awarded-qty,
-.receipt-delivered-qty{
+.receipt-delivered-qty {
   width: 100px;
 }
 
@@ -221,11 +221,11 @@ $mat-row-horizontal-padding: 12px;
   }
 }
 
-.receipt-material-name{
+.receipt-material-name {
   padding-left: 12px !important;
 }
 
-.report{
+.report {
   .mat-form-field-appearance-legacy.select-project .mat-form-field-wrapper {
     padding-top: 0px !important;
   }
@@ -233,17 +233,21 @@ $mat-row-horizontal-padding: 12px;
 
 /** Add Receipt Via System, Add Custom Material Dialog CSS **/
 
-.create-receipt-excel, .add-receipt-via-system, .add-custom-material, .delete-bom, .add-project-dialog{
-  .mat-dialog-container{
+.create-receipt-excel,
+.add-receipt-via-system,
+.add-custom-material,
+.delete-bom,
+.add-project-dialog {
+  .mat-dialog-container {
     padding: 5px 24px 5px !important;
   }
 
-  .mat-dialog-content{
+  .mat-dialog-content {
     padding: 0;
     overflow-x: hidden;
   }
 
-  .mat-dialog-title{
+  .mat-dialog-title {
     opacity: 0.7;
     line-height: 20px;
     font-size: 18px;
@@ -255,51 +259,54 @@ $mat-row-horizontal-padding: 12px;
     line-height: 10px;
   }
 
-  .modal-body{
+  .modal-body {
     padding: 1rem 1.5rem;
   }
 }
 
-.add-receipt-via-system, .add-custom-material{
-  .col-unit{
+.add-receipt-via-system,
+.add-custom-material {
+  .col-unit {
     flex-basis: 10%;
     max-width: 10%;
   }
 
-  .col-material-name{
+  .col-material-name {
     flex-basis: 18.666667%;
     max-width: 18.666667%;
   }
 }
 
-.add-receipt-via-system{
-
-  .col-add-btn{
+.add-receipt-via-system {
+  .col-add-btn {
     flex-basis: 4.3333%;
     max-width: 4.3333%;
   }
 
-  .mat-horizontal-stepper-header-container .mat-step-header{
-    &:first-child{
+  .mat-horizontal-stepper-header-container .mat-step-header {
+    &:first-child {
       padding-left: 0;
     }
 
-    &:last-child{
+    &:last-child {
       padding-right: 0;
     }
   }
 
-  .mat-step-header.cdk-keyboard-focused, .mat-step-header.cdk-program-focused, .mat-step-header:hover{
+  .mat-step-header.cdk-keyboard-focused,
+  .mat-step-header.cdk-program-focused,
+  .mat-step-header:hover {
     background-color: transparent !important;
   }
 
-  .receipt-number, .receipt-date{
-    .mat-form-field-wrapper{
-     padding-top: 0px !important;
-   }
+  .receipt-number,
+  .receipt-date {
+    .mat-form-field-wrapper {
+      padding-top: 0px !important;
+    }
   }
 
-  .supplier-details h5{
+  .supplier-details h5 {
     font-size: 1.2rem;
   }
 
@@ -310,75 +317,76 @@ $mat-row-horizontal-padding: 12px;
   }
 }
 
-.add-custom-material{
-  .material-seperator{
+.add-custom-material {
+  .material-seperator {
     margin-bottom: 0rem;
   }
 
-  .col-unit-rate{
+  .col-unit-rate {
     max-width: 14%;
     flex-basis: 14%;
   }
 
-  .col-add-btn{
+  .col-add-btn {
     max-width: 7.01107%;
     flex-basis: 7.01107%;
   }
 
-  .add-material-btn{
+  .add-material-btn {
     padding-right: 0px;
   }
 }
 
-.create-receipt-excel{
-  .equal-height{
+.create-receipt-excel {
+  .equal-height {
     min-height: 85px;
   }
 }
 
-.width-75px{
+.width-75px {
   width: 75px !important;
 }
 
-@media only screen and (max-width: 992px) and (min-width: 768px){
-
-  .add-custom-material, .add-receipt-via-system{
+@media only screen and (max-width: 992px) and (min-width: 768px) {
+  .add-custom-material,
+  .add-receipt-via-system {
     .col-sm-12 {
       flex-basis: 100%;
       max-width: 100%;
     }
   }
 
-  .add-custom-material{
+  .add-custom-material {
     .col-sm-6 {
       flex-basis: 50%;
       max-width: 50%;
     }
 
-    .modal-body{
+    .modal-body {
       padding-top: 0;
     }
   }
 
-  .add-receipt-via-system{
-    .col-sm-4{
+  .add-receipt-via-system {
+    .col-sm-4 {
       flex-basis: 33.33333333%;
       max-width: 33.33333333%;
     }
   }
 }
 
-@media only screen and (max-width: 767px){
-  .receipts-outer-section{
+@media only screen and (max-width: 767px) {
+  .receipts-outer-section {
     padding-top: 5px !important;
   }
 
-  .add-custom-material, .add-receipt-via-system{
-    .col-add-btn{
+  .add-custom-material,
+  .add-receipt-via-system {
+    .col-add-btn {
       display: none !important;
     }
 
-    .col-xs-12{
+    .col-xs-12 {
       flex-basis: 100%;
       max-width: 100%;
     }
@@ -388,39 +396,41 @@ $mat-row-horizontal-padding: 12px;
       max-width: 41.66666667%;
     }
 
-    .material-icons.add-material-btn{
+    .material-icons.add-material-btn {
       font-size: 30px;
       line-height: 1.5;
     }
   }
 
-  .add-receipt-via-system{
-    .receipt-number, .receipt-date{
+  .add-receipt-via-system {
+    .receipt-number,
+    .receipt-date {
       & > span {
         display: none;
       }
-      
-      .mat-form-field{
+
+      .mat-form-field {
         width: 100%;
       }
     }
   }
 
-  .add-custom-material{
-    .mobile-padding, .col-material-name .mat-form-field-wrapper{
+  .add-custom-material {
+    .mobile-padding,
+    .col-material-name .mat-form-field-wrapper {
       padding-top: 0px !important;
     }
   }
 }
 
-@media only screen and (max-width: 599px){
+@media only screen and (max-width: 599px) {
   .receipts-outer-section {
     padding-top: 0px !important;
     margin-top: -10px !important;
   }
 }
 
-@media only screen and (max-width: 560px){
+@media only screen and (max-width: 560px) {
   .add-receipt-via-system .modal-body,
   .add-custom-material .modal-body,
   .create-receipt-excel .modal-body {
@@ -429,36 +439,101 @@ $mat-row-horizontal-padding: 12px;
 
   .add-receipt-via-system .mat-dialog-content,
   .add-custom-material .modal-dialog-content,
-  .create-receipt-excel .modal-dialog-content{
+  .create-receipt-excel .modal-dialog-content {
     padding: 0px !important;
   }
 }
 
-@media only screen and (max-width: 462px){
-  .grn-dashboard{
-    .po-number-grn{
+@media only screen and (max-width: 462px) {
+  .grn-dashboard {
+    .po-number-grn {
       margin: 0 0 10px 0;
     }
   }
 
-  .add-edit-receipts .grn-first-row{
-      padding-top: 0px !important;
+  .add-edit-receipts .grn-first-row {
+    padding-top: 0px !important;
   }
 }
 
-@media only screen and (max-width: 390px){
-  .uploaded-documents-details{
-    .col-xs-9, .col-xs-3{
+@media only screen and (max-width: 390px) {
+  .uploaded-documents-details {
+    .col-xs-9,
+    .col-xs-3 {
       flex-basis: 100%;
       max-width: 100%;
     }
 
-    .show-download{
+    .show-download {
       height: 12px;
     }
 
-    .row{
+    .row {
       margin-top: 20px !important;
     }
+  }
+}
+
+.add-grn-responsive-div {
+  max-height: 270px;
+  overflow-y: auto;
+  .add-edit-grn-popup-accordian.mat-accordion {
+    .mat-expansion-panel-header {
+      min-height: 72px;
+      background: #f3f3f3;
+    }
+
+    .mat-form-field {
+      text-align: left;
+      position: absolute;
+      top: 12%;
+      left: 0%;
+    }
+    .mat-form-field-infix {
+      display: block;
+      position: relative;
+      flex: auto;
+      min-width: 0;
+      width: 112px;
+      font-size: 12px;
+    }
+    .myPanel .mat-expansion-panel-body {
+      background: #fafafa;
+    }
+    .mat-expansion-panel-header {
+      padding: 0 5px;
+    }
+  }
+}
+
+@media only screen and (min-width: 576px) {
+  .add-grn-responsive-div {
+    max-height: 220px;
+    overflow-y: auto;
+    .add-edit-grn-popup-accordian.mat-accordion {
+      .mat-expansion-panel-header {
+        min-height: 72px;
+        background: #f3f3f3;
+      }
+
+      .mat-form-field {
+        text-align: left;
+        position: absolute;
+        top: 12%;
+        left: 12%;
+        width: 100%;
+      }
+      .mat-form-field-infix {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .add-grn-responsive-div {
+    position: relative;
+    width: 110%;
+    left: -5%;
   }
 }
